test/types/tuple/diten/tupleExpandInt.good
tupleExpandInt.chpl:3: error: invalid tuple expand primitive
