test/types/tuple/diten/tupleExpandInt.chpl
var a: int;

writeln((...a));
